<resources>
    <string name="app_name">ADVinci</string>
    <string name="title_activity_login">Entrar</string>

    <!-- Strings related to login -->
    <string name="nome_usuario">Nome</string>
    <string name="sobrenome_usuario">Sobrenome</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="prompt_password_confirm">Confirmar senha</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_login">Já tenho uma conta</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="action_create_account">Criar conta</string>
    <string name="action_forgotpass">Recuperar senha</string>
    <string name="error_invalid_email">Email inválido</string>
    <string name="error_invalid_password">Senha muito curta</string>
    <string name="error_incorrect_password">Senha inválida</string>
    <string name="error_field_required">Campo obrigatório</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_recover_password">Esqueci minha senha</string>
    <string name="title_listaeventos">Programação</string>
    <string name="title_evento">Evento</string>
    <string name="title_activity_interesses">Editar interesses</string>
    <string name="title_activity_perfil">Perfil</string>
    <string name="title_activity_historico">Histórico</string>

    <!-- Strings related to Settings -->
    <string name="ad_iconAd">Possui áudio-descrição</string>
    <string name="ad_iconLse">Possui legenda para surdos ou closed capation</string>
    <string name="ad_iconLibras">Possui intérprete de LIBRAS</string>
    <string name="ad_iconMobi">Possui acessibilidade arquitetônica</string>
    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>

    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="title_activity_programacao">Programação</string>

    <string name="action_settings">Configurações</string>

    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_sobre">SobreActivity</string>
</resources>
